--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ethers": "^6.13.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4",
     "xlsx": "^0.18.5"
